--- a/static/style.scss
+++ b/static/style.scss
@@ -3,7 +3,7 @@ $LIGHT_BLACK: #CDCDCD;
 
 :root {
     background-color: #FEFEFE;
-    font-family: 'monospace', 'sans-serif';
+    font-family: 'monospace';
     h1, h2, h3, h4, h5, p, :link, :visited {
         color: $BLACK;
     }
@@ -23,43 +23,53 @@ body {
     margin: 0;
 }
 
-header {
-    max-width: 54rem;
+header, footer {
+    align-items: center;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
-    align-items: center;
-    .title {
-        p {
-            font-weight: bold;
-            font-size: 24px;
-        }
-        margin-right: 3rem;
+    max-width: 54rem;
+}
+
+.title {
+    p {
+        font-size: 24px;
+        font-weight: bold;
+    }
+    margin-right: 3rem;
+}
+
+footer {
+    font-family: 'sans-serif';
+    justify-content: center;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+    p {
+        font-size: 15px;
     }
 }
 
 main {
     max-width: 54rem;
-    margin-bottom: 3rem;
     margin-right: auto;
     margin-left: auto;
 }
 
 textarea {
     max-width: 100%;
-    min-width: 100%;
     min-height: 10rem;
+    min-width: 100%;
 }
 
 form {
-    margin-top: 1rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 table {
+    border-collapse: collapse;
     max-width: 100%;
     min-width: 100%;
-    border-collapse: collapse;
 }
 
 col:first-child {
@@ -67,9 +77,9 @@ col:first-child {
 }
 
 th, td {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
     font-size: 16px;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
     word-break: break-word;
 }
 
@@ -79,13 +89,13 @@ th:first-child {
 }
 
 tbody > tr {
-    border-top: 1px $LIGHT_BLACK solid;
     border-bottom: 1px $LIGHT_BLACK solid;
+    border-top: 1px $LIGHT_BLACK solid;
 }
 
 tbody > tr:first-child {
-    padding: 1em;
     border-bottom: 1px $LIGHT_BLACK solid;
+    padding: 1em;
 }
 
 tbody > tr:last-child {
